--- a/services/pc-repair.html
+++ b/services/pc-repair.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" type="image/png" href="assets/media/favicon.png">
-	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-	<meta name="Keywords" content="reparacion pc, reparacion pc a domicilio, soporte tecnico pc, soporte tecnico a computadoras, servicio de soporte tecnico a computadoras, mantenimiento de computadoras, mantenimiento y reparacion de computadoras, reparacion de laptops, diseño web, desarrollo web">
+	<link rel="shortcut icon" type="image/png" href="../assets/media/favicon.png">
+	<link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
+	<link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
 	<meta name="Description" content="Servicio técnico profesional, todos los trabajos garantidos, más de 10 años de experiencia. Reciba en la comodidad de su hogar u oficina a un técnico consultor y obtenga su consulta gratis.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
@@ -14,9 +13,9 @@
 <body>
 	<header class="main-header">
 		<div class="align">
-			<a href="#home">
+			<a href="../index.html">
 				<div class="main-header-logo-container">
-					<img src="assets/media/logo.png" class="main-header-logo">
+					<img src="../assets/media/logo.png" class="main-header-logo">
 					<div class="main-header-logo-tittle-container">
 						<h1 class="main-header-logo-tittle logo-orange">INCOM </h1><h1 class="main-header-logo-tittle logo-blue">Computación</h1>
 					</div>
@@ -24,7 +23,7 @@
 			</a>
 
 			<div class="main-header-nav-container">
-				<nav class="main-header-nav desktop">
+				<nav class="main-header-nav">
 					<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
 					<a href="#services">Servicios</a>
 					<a href="#us">Empresa</a>
@@ -32,14 +31,13 @@
 					<a href="#vision">Visión</a>
 				</nav>
 			</div>
-
-			<a class="mobile"><i class="fa fa-bars" aria-hidden="true"></i></a>
 		</div>
 
 
 	<!--  Navigation Responsive -->
 
 
+		<a style="display: none;"><i class="fa fa-bars" aria-hidden="true"></i></a>
 
 	</header>
 		
@@ -78,12 +76,18 @@
 				<div class="us-section-content-align">
 					<div class="justify">
 						<div class="section-tittle-container">
-							<h1 class="section-tittle first-tittle">Bienvenido</h1>
+							<h1 class="section-tittle first-tittle">Servicio técnico para todo Montevideo</h1>
 						</div>
-						<div class="home-section-button">
-							<a href="#services">
-								<button>¡Ven a ver!</button>
-							</a>
+						<div class="section-tittle-container">
+							<h3 class="section-tittle second-tittle">Reciba en la comodidad de su hogar u oficina a un técnico consultor y obtenga su consulta gratis.</h3>
+						</div>
+						<div class="section-tittle-container">
+							<h2 class="section-tittle last-tittle">¡Contáctate e informate ya mismo!</h2>
+						</div>
+						<div class="landing-contact-icons">
+							<a onClick="showModal()" style="cursor: pointer;"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+							<a href="tel:23598454"><i class="fa fa-phone-square" aria-hidden="true"></i></a>
+							<a href="https://wa.me/59899884620" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
 						</div>
 					</div>
 				</div>
@@ -102,10 +106,10 @@
 
 				<div class="service-global-container">
 					<div class="service-container-tittle"><h2>Seguro por daños</h2></div>
-					<a href="services/secure.html">
+					<a href="secure.html">
 						<div class="service-container">
 							<div class="service-container-img-container">
-								<img src="assets/media/services/secure.jpg" class="service-container-img">
+								<img src="../assets/media/services/secure.jpg" class="service-container-img">
 							</div>
 						</div>
 					</a>
@@ -113,32 +117,32 @@
 
 				<div class="service-global-container centered">
 					<div class="service-container-tittle"><h2>Control parental</h2></div>
-					<a href="services/parental-control.html">
+					<a href="parental-control.html">
 						<div class="service-container">
 							<div class="service-container-img-container">
-								<img src="assets/media/services/parental-control.jpg" class="service-container-img">
+								<img src="../assets/media/services/parental-control.jpg" class="service-container-img">
 							</div>
 						</div>
-					</a>	
+					</a>
 				</div>
 
 				<div class="service-global-container">
 					<div class="service-container-tittle"><h2>Asistencia remota</h2></div>
-					<a href="services/remote-asistence.html">
+					<a href="remote-asistence.html">
 						<div class="service-container">
 							<div class="service-container-img-container">
-								<img src="assets/media/services/remote-asistence.jpg" class="service-container-img">
+								<img src="../assets/media/services/remote-asistence.jpg" class="service-container-img">
 							</div>
 						</div>
-					</a>	
+					</a>
 				</div>
 
 				<div class="service-global-container service-container-space">
 					<div class="service-container-tittle"><h2>Reparación PC</h2></div>
-					<a href="services/pc-repair.html">
-						<div class="service-container">
+					<a href="pc-repair.html">
+						<div class="service-container  selected-service">
 							<div class="service-container-img-container">
-								<img src="assets/media/services/pc-repair.jpg" class="service-container-img">
+								<img src="../assets/media/services/pc-repair.jpg" class="service-container-img">
 							</div>
 						</div>
 					</a>
@@ -146,10 +150,10 @@
 
 				<div class="service-global-container service-container-space">
 					<div class="service-container-tittle"><h2>Creación Web</h2></div>
-					<a href="services/web-creation.html">
+					<a href="web-creation.html">
 						<div class="service-container">
 							<div class="service-container-img-container">
-								<img src="assets/media/services/web-creation.jpg" class="service-container-img">
+								<img src="../assets/media/services/web-creation.jpg" class="service-container-img">
 							</div>
 						</div>
 					</a>
@@ -266,9 +270,9 @@
 
 	<a href="#home" class="scroll-up fa fa-angle-up" style="display: block;"></a>
 
-	<script type="text/javascript" src="assets/js/jquery-1.12.0.min.js"></script>
-	<script type="text/javascript" src="assets/js/jquery.jcarousel.min.js"></script>
-	<script type="text/javascript" src="assets/js/scripts.js"></script>
-	<script type="text/javascript" src="assets/js/modal.js"></script>
+	<script type="text/javascript" src="../assets/js/jquery-1.12.0.min.js"></script>
+	<script type="text/javascript" src="../assets/js/jquery.jcarousel.min.js"></script>
+	<script type="text/javascript" src="../assets/js/scripts.js"></script>
+	<script type="text/javascript" src="../assets/js/modal.js"></script>
 </body>
 </html>
