--- a/index.html
+++ b/index.html
@@ -12,10 +12,44 @@
 	<title>INCOM Computación</title>
 </head>
 <body>
-	<header class="main-header">
-		<div class="align">
-			<a href="#home">
-				<div class="main-header-logo-container">
+		
+	<header>
+		<div class="main-header-container align">
+			
+			<a href="#home" class="logo">
+				<img src="assets/media/logo.png" class="main-header-logo">
+			</a>
+
+			<nav class="main-header-nav desktop">
+				<ul>
+					<li>
+						<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
+					</li>
+					<li>
+						<a href="#services">Servicios</a>
+					</li>
+					<li>
+						<a href="#us">Empresa</a>
+					</li>
+					<li>
+						<a href="#mision">Nuestra misión</a>
+					</li>
+					<li>
+						<a href="#vision">Visión</a>
+					</li>
+				</ul>
+			</nav>
+
+			<a class="main-header-burger-menu mobile"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></a>
+
+		</div>
+	</header>
+
+
+<!-- 	<header class="main-header">
+		<div class="main-header-container align">
+			<a href="#home"> inline
+				<div class="main-header-logo-container"> block
 					<img src="assets/media/logo.png" class="main-header-logo">
 					<div class="main-header-logo-tittle-container">
 						<h1 class="main-header-logo-tittle logo-orange">INCOM </h1><h1 class="main-header-logo-tittle logo-blue">Computación</h1>
@@ -34,7 +68,7 @@
 			</div>
 
 			<a class="mobile"><i class="fa fa-bars" aria-hidden="true"></i></a>
-		</div>
+		</div> -->
 
 
 	<!--  Navigation Responsive -->
