--- a/services/pc-repair.html
+++ b/services/pc-repair.html
@@ -11,36 +11,64 @@
 	<title>INCOM Computación</title>
 </head>
 <body>
-	<header class="main-header">
-		<div class="align">
-			<a href="../index.html">
-				<div class="main-header-logo-container">
-					<img src="../assets/media/logo.png" class="main-header-logo">
-					<div class="main-header-logo-tittle-container">
-						<h1 class="main-header-logo-tittle logo-orange">INCOM </h1><h1 class="main-header-logo-tittle logo-blue">Computación</h1>
-					</div>
-				</div>
+	
+	<header>
+		<div class="main-header-container align">
+			
+			<a href="../index.html" class="logo">
+				<img src="../assets/media/logo.png" class="main-header-logo">
 			</a>
 
-			<div class="main-header-nav-container">
-				<nav class="main-header-nav">
-					<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
-					<a href="#services">Servicios</a>
-					<a href="#us">Empresa</a>
-					<a href="#mision">Nuestra misión</a>
-					<a href="#vision">Visión</a>
-				</nav>
-			</div>
+			<nav class="main-header-nav desktop">
+				<ul>
+					<li>
+						<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
+					</li>
+					<li>
+						<a href="#services">Servicios</a>
+					</li>
+					<li>
+						<a href="#us">Empresa</a>
+					</li>
+					<li>
+						<a href="#mision">Nuestra misión</a>
+					</li>
+					<li>
+						<a href="#vision">Visión</a>
+					</li>
+				</ul>
+			</nav>
+
+			<a class="main-header-burger-menu mobile" onclick="showMenu()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></a>
+
 		</div>
-
-
-	<!--  Navigation Responsive -->
-
-
-		<a style="display: none;"><i class="fa fa-bars" aria-hidden="true"></i></a>
-
 	</header>
 		
+	<!-- Modal Menu -->
+
+	<section class="menuModal" id="menu-modal">
+		<nav class="main-header-nav-mobile mobile-menu">
+				<ul>
+					<li>
+						<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
+					</li>
+					<li>
+						<a href="#services">Servicios</a>
+					</li>
+					<li>
+						<a href="#us">Empresa</a>
+					</li>
+					<li>
+						<a href="#mision">Nuestra misión</a>
+					</li>
+					<li>
+						<a href="#vision">Visión</a>
+					</li>
+				</ul>
+			</nav>
+			<button type="button" class="modal-contact-element button-element" id="closeModalButton" onClick="hideMenu()">Cerrar</button>
+	</section>
+
 
 	<!--  Hide Modal Section  -->
 
@@ -148,7 +176,7 @@
 					</a>
 				</div>
 
-				<div class="service-global-container service-container-space">
+				<div class="service-global-container service-container-space" id="final-service">
 					<div class="service-container-tittle"><h2>Creación Web</h2></div>
 					<a href="web-creation.html">
 						<div class="service-container">
@@ -172,7 +200,7 @@
 				<div class="us-section-content-align">
 					<div class="justify">
 						<div class="section-tittle-container">
-							<h1 class="section-tittle">Nuestra empresa</h1>
+							<h1 class="service-tittle">Nuestra empresa</h1>
 						</div>
 						<div class="us-section-content">
 							<p class="us-section-p">Desde hace más de 15 años incorporados en Montevideo estamos para ofrecer nuestros servicios. Además de suministrarle cualquier equipamento, buscamos para usted las mejores soluciones en infraestructura.</p>
@@ -194,7 +222,7 @@
 				<div class="us-section-content-align">
 					<div class="justify">
 						<div class="section-tittle-container">
-							<h1 class="section-tittle">Nuestra misión</h1>
+							<h1 class="service-tittle">Nuestra misión</h1>
 						</div>
 						<div class="us-section-content">
 							<p class="us-section-p">Satisfacemos las necesidades de nuestros clientes con responsabilidad y entusiasmo porque amamos lo que hacemos.</p>
@@ -219,7 +247,7 @@
 				<div class="us-section-content-align">
 					<div class="justify">
 						<div class="section-tittle-container">
-							<h1 class="section-tittle">Nuestra visión</h1>
+							<h1 class="service-tittle">Nuestra visión</h1>
 						</div>
 						<div class="us-section-content">
 							<p class="us-section-p">Nuestra visión se enfoca en proyectarnos de la mano de nuestros clientes, estableciendo de esta manera un vínculo humano, racional y profesional y así forjar un ambiente de trabajo motivador e inspirador.</p>
@@ -234,7 +262,7 @@
 	<footer class="main-footer">
 		<div class="align">
 			<div class="main-footer-logo-tittle-container">
-				<h1 class="main-header-logo-tittle logo-orange">INCOM </h1><h1 class="main-header-logo-tittle logo-blue">Computación</h1>
+				<h1 class="footer-logo">INCOM </h1><h1 class="footer-logo">Computación</h1>
 			</div>
 			<div class="address-container">
 				<span>Manuel Herrera y Obes 4648 - Montevideo, Uruguay</span>
