Agregado de los landings personalizados

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 						<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
 					</li>
 					<li>
-						<a href="#services">Servicios</a>
+						<a onClick="hideMenu()" href="#services">Servicios</a>
 					</li>
 					<li>
-						<a href="#us">Empresa</a>
+						<a onClick="hideMenu()" href="#us">Empresa</a>
 					</li>
 					<li>
-						<a href="#mision">Nuestra misión</a>
+						<a onClick="hideMenu()" href="#mision">Nuestra misión</a>
 					</li>
 					<li>
-						<a href="#vision">Visión</a>
+						<a onClick="hideMenu()" href="#vision">Visión</a>
 					</li>
 				</ul>
 			</nav>
