--- a/services/remote-asistence.html
+++ b/services/remote-asistence.html
@@ -99,8 +99,8 @@
 
 	<!--  Main Page Section  -->
 
-	<section class="fullscrn light" id="pre_home">
-		<div class="fullscrn light">
+	<section class="fullscrn" id="pre_home_remote">
+		<div class="fullscrn">
 			<div class="align">
 				<div class="us-section-content-align">
 					<div class="justify">
@@ -108,7 +108,7 @@
 							<h1 class="section-tittle first-tittle">Asistencia técnica remota</h1>
 						</div>
 						<div class="section-tittle-container">
-							<h2 class="section-tittle second-tittle">Solucione sus incovenientes a un mensaje de distancia.</h2>
+							<h2 class="section-tittle last-tittle">Solucione sus incovenientes a un mensaje de distancia.</h2>
 						</div>
 						<div class="section-tittle-container">
 							<h2 class="section-tittle last-tittle">¡Contáctate e informate ya mismo!</h2>
@@ -297,7 +297,7 @@
 
 	</footer>
 
-	<a href="#home" class="scroll-up fa fa-angle-up" style="display: block;"></a>
+	<a href="#home_remote" class="scroll-up fa fa-angle-up" style="display: block;"></a>
 
 	<script type="text/javascript" src="../assets/js/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="../assets/js/jquery.jcarousel.min.js"></script>
