--- a/services/pc-repair.html
+++ b/services/pc-repair.html
@@ -98,8 +98,8 @@
 
 	<!--  Main Page Section  -->
 
-	<section class="fullscrn light" id="pre_home">
-		<div class="fullscrn light">
+	<section class="fullscrn" id="pre_home_repair">
+		<div class="fullscrn">
 			<div class="align">
 				<div class="us-section-content-align">
 					<div class="justify">
@@ -107,7 +107,7 @@
 							<h1 class="section-tittle first-tittle">Servicio técnico para todo Montevideo</h1>
 						</div>
 						<div class="section-tittle-container">
-							<h3 class="section-tittle second-tittle">Reciba en la comodidad de su hogar u oficina a un técnico consultor y obtenga su consulta gratis.</h3>
+							<h3 class="section-tittle last-tittle">Reciba en la comodidad de su hogar u oficina a un técnico consultor y obtenga su consulta gratis.</h3>
 						</div>
 						<div class="section-tittle-container">
 							<h2 class="section-tittle last-tittle">¡Contáctate e informate ya mismo!</h2>
@@ -296,7 +296,7 @@
 
 	</footer>
 
-	<a href="#home" class="scroll-up fa fa-angle-up" style="display: block;"></a>
+	<a href="#home_repair" class="scroll-up fa fa-angle-up" style="display: block;"></a>
 
 	<script type="text/javascript" src="../assets/js/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="../assets/js/jquery.jcarousel.min.js"></script>
