--- a/services/web-creation.html
+++ b/services/web-creation.html
@@ -100,8 +100,8 @@
 
 	<!--  Main Page Section  -->
 
-	<section class="fullscrn light" id="pre_home">
-		<div class="fullscrn light">
+	<section class="fullscrn" id="pre_home_web">
+		<div class="fullscrn">
 			<div class="align">
 				<div class="us-section-content-align">
 					<div class="justify">
@@ -109,7 +109,7 @@
 							<h1 class="section-tittle first-tittle">Diseño y desarrollo web</h1>
 						</div>
 						<div class="section-tittle-container">
-							<h2 class="section-tittle second-tittle">Construímos su sitio web de acuerdo a sus necesidades.</h2>
+							<h2 class="section-tittle last-tittle">Construímos su sitio web de acuerdo a sus necesidades.</h2>
 						</div>
 						<div class="section-tittle-container">
 							<h2 class="section-tittle last-tittle">¡Contáctate e informate ya mismo!</h2>
@@ -298,7 +298,7 @@
 
 	</footer>
 
-	<a href="#home" class="scroll-up fa fa-angle-up" style="display: block;"></a>
+	<a href="#home_web" class="scroll-up fa fa-angle-up" style="display: block;"></a>
 
 	<script type="text/javascript" src="../assets/js/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="../assets/js/jquery.jcarousel.min.js"></script>
