--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 				<!-- Services -->
 
-				<div class="service-global-container">
+				<div class="service-global-container service-container-space">
 					<div class="service-container-tittle"><h2>Seguro por daños</h2></div>
 					<a href="services/secure.html">
 						<div class="service-container">
@@ -137,7 +137,7 @@
 					</a>
 				</div>
 
-				<div class="service-global-container centered">
+				<div class="service-global-container centered service-container-space">
 					<div class="service-container-tittle"><h2>Control parental</h2></div>
 					<a href="services/parental-control.html">
 						<div class="service-container">
@@ -148,7 +148,7 @@
 					</a>	
 				</div>
 
-				<div class="service-global-container">
+				<div class="service-global-container service-container-space">
 					<div class="service-container-tittle"><h2>Asistencia remota</h2></div>
 					<a href="services/remote-asistence.html">
 						<div class="service-container">
@@ -197,10 +197,10 @@
 							<h1 class="service-tittle">Nuestra empresa</h1>
 						</div>
 						<div class="us-section-content">
-							<p class="us-section-p">Desde hace más de 15 años incorporados en Montevideo estamos para ofrecer nuestros servicios. Además de suministrarle cualquier equipamento, buscamos para usted las mejores soluciones en infraestructura.</p>
+							<p class="us-section-p">Desde hace más de 15 años incorporados en Montevideo estamos para ofrecer nuestros servicios. Además de suministrarle cualquier equipamiento, buscamos para usted las mejores soluciones en infraestructura.</p>
 						</div>
 						<div class="us-section-content">
-							<p class="us-section-p">Competimos con la mejor comodidad para usted ajustando a sus necesidades, nuestros clientes son usuarios finales, empresas de todos los sectores y tamaños desde PYMES o profesionales autónomos con necesidades básicas pasando por empresas de cualquier sector con varios ordenadores y servidores.</p>
+							<p class="us-section-p">Competimos con la mejor comodidad para usted ajustado a sus necesidades, nuestros clientes son usuarios finales, empresas de todos los sectores y tamaños desde PYMES o profesionales autónomos con necesidades básicas pasando por empresas de cualquier sector con varios ordenadores y servidores.</p>
 						</div>
 					</div>
 				</div>
@@ -244,7 +244,7 @@
 							<h1 class="service-tittle">Nuestra visión</h1>
 						</div>
 						<div class="us-section-content">
-							<p class="us-section-p">Nuestra visión se enfoca en proyectarnos de la mano de nuestros clientes, estableciendo de esta manera un vínculo humano, racional y profesional y así forjar un ambiente de trabajo motivador e inspirador.</p>
+							<p class="us-section-p">Nuestra visión se enfoca en proyectarnos de la mano de nuestros clientes, estableciendo de esta manera un vínculo humano, racional y profesional. De esta manera, forjamos un ambiente de trabajo motivador e inspirador.</p>
 						</div>
 					</div>
 				</div>
@@ -256,7 +256,7 @@
 	<footer class="main-footer">
 		<div class="align">
 			<div class="main-footer-logo-tittle-container">
-				<h1 class="footer-logo">INCOM </h1><h1 class="footer-logo">Computación</h1>
+				<h1 class="footer-logo">INCOM Computación</h1>
 			</div>
 			<div class="address-container">
 				<span>Manuel Herrera y Obes 4648 - Montevideo, Uruguay</span>
@@ -271,13 +271,13 @@
 			<a href="https://www.facebook.com/incomRPC/" target="_blank">
 				<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			</a>
-			<a href="">
+			<a href="https://plus.google.com/" target="_blank">
 				<i class="fa fa-google-plus-square" aria-hidden="true"></i>
 			</a>
-			<a href="http://www.twitter.com" target="_blank">
+			<a href="https://twitter.com/INCOMrpc" target="_blank">
 				<i class="fa fa-twitter-square" aria-hidden="true"></i>
 			</a>
-			<a href="http://www.instagram.com" target="_blank">
+			<a href="https://www.instagram.com/incomcomputacion/" target="_blank">
 				<i class="fa fa-instagram" aria-hidden="true"></i>
 			</a>
 		</div>
