--- a/services/secure.html
+++ b/services/secure.html
@@ -53,16 +53,16 @@
 						<a onClick="showModal()" style="cursor: pointer;">Contacto</a>
 					</li>
 					<li>
-						<a href="#services">Servicios</a>
+						<a onClick="hideMenu()" href="#services">Servicios</a>
 					</li>
 					<li>
-						<a href="#us">Empresa</a>
+						<a onClick="hideMenu()" href="#us">Empresa</a>
 					</li>
 					<li>
-						<a href="#mision">Nuestra misión</a>
+						<a onClick="hideMenu()" href="#mision">Nuestra misión</a>
 					</li>
 					<li>
-						<a href="#vision">Visión</a>
+						<a onClick="hideMenu()" href="#vision">Visión</a>
 					</li>
 				</ul>
 			</nav>
@@ -108,14 +108,14 @@
 							<h1 class="section-tittle first-tittle">Asegure su PC</h1>
 						</div>
 						<div class="section-tittle-container">
-							<h2 class="section-tittle last-tittle">contra todo tipo de daños físicos.</h2>
+							<h2 class="section-tittle last-tittle">Contra todo tipo de daños físicos.</h2>
 						</div>
 						<div class="section-tittle-container">
 							<h2 class="section-tittle last-tittle">¡Contáctate e informate ya mismo!</h2>
 						</div>
 						<div class="landing-contact-icons">
 							<a onClick="showModal()" style="cursor: pointer;"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-							<a href="tel:23598454"><i class="fa fa-phone-square" aria-hidden="true"></i></a>
+							<a href="tel:099884620"><i class="fa fa-phone-square" aria-hidden="true"></i></a>
 							<a href="https://wa.me/59899884620" target="_blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
 						</div>
 					</div>
@@ -133,7 +133,7 @@
 
 				<!-- Services -->
 
-				<div class="service-global-container">
+				<div class="service-global-container service-container-space">
 					<div class="service-container-tittle"><h2>Seguro por daños</h2></div>
 					<a href="secure.html">
 						<div class="service-container selected-service">
@@ -144,7 +144,7 @@
 					</a>
 				</div>
 
-				<div class="service-global-container centered">
+				<div class="service-global-container centered service-container-space">
 					<div class="service-container-tittle"><h2>Control parental</h2></div>
 					<a href="parental-control.html">
 						<div class="service-container">
@@ -155,7 +155,7 @@
 					</a>
 				</div>
 
-				<div class="service-global-container">
+				<div class="service-global-container service-container-space">
 					<div class="service-container-tittle"><h2>Asistencia remota</h2></div>
 					<a href="remote-asistence.html">
 						<div class="service-container">
@@ -204,10 +204,10 @@
 							<h1 class="service-tittle">Nuestra empresa</h1>
 						</div>
 						<div class="us-section-content">
-							<p class="us-section-p">Desde hace más de 15 años incorporados en Montevideo estamos para ofrecer nuestros servicios. Además de suministrarle cualquier equipamento, buscamos para usted las mejores soluciones en infraestructura.</p>
+							<p class="us-section-p">Desde hace más de 15 años incorporados en Montevideo estamos para ofrecer nuestros servicios. Además de suministrarle cualquier equipamiento, buscamos para usted las mejores soluciones en infraestructura.</p>
 						</div>
 						<div class="us-section-content">
-							<p class="us-section-p">Competimos con la mejor comodidad para usted ajustando a sus necesidades, nuestros clientes son usuarios finales, empresas de todos los sectores y tamaños desde PYMES o profesionales autónomos con necesidades básicas pasando por empresas de cualquier sector con varios ordenadores y servidores.</p>
+							<p class="us-section-p">Competimos con la mejor comodidad para usted ajustado a sus necesidades, nuestros clientes son usuarios finales, empresas de todos los sectores y tamaños desde PYMES o profesionales autónomos con necesidades básicas pasando por empresas de cualquier sector con varios ordenadores y servidores.</p>
 						</div>
 					</div>
 				</div>
@@ -251,7 +251,7 @@
 							<h1 class="service-tittle">Nuestra visión</h1>
 						</div>
 						<div class="us-section-content">
-							<p class="us-section-p">Nuestra visión se enfoca en proyectarnos de la mano de nuestros clientes, estableciendo de esta manera un vínculo humano, racional y profesional y así forjar un ambiente de trabajo motivador e inspirador.</p>
+							<p class="us-section-p">Nuestra visión se enfoca en proyectarnos de la mano de nuestros clientes, estableciendo de esta manera un vínculo humano, racional y profesional. De esta manera, forjamos un ambiente de trabajo motivador e inspirador.</p>
 						</div>
 					</div>
 				</div>
@@ -263,7 +263,7 @@
 	<footer class="main-footer">
 		<div class="align">
 			<div class="main-footer-logo-tittle-container">
-				<h1 class="footer-logo">INCOM </h1><h1 class="footer-logo">Computación</h1>
+				<h1 class="footer-logo">INCOM Computación</h1>
 			</div>
 			<div class="address-container">
 				<span>Manuel Herrera y Obes 4648 - Montevideo, Uruguay</span>
@@ -278,13 +278,13 @@
 			<a href="https://www.facebook.com/incomRPC/" target="_blank">
 				<i class="fa fa-facebook-official" aria-hidden="true"></i>
 			</a>
-			<a href="">
+			<a href="https://plus.google.com/" target="_blank">
 				<i class="fa fa-google-plus-square" aria-hidden="true"></i>
 			</a>
-			<a href="http://www.twitter.com" target="_blank">
+			<a href="https://twitter.com/INCOMrpc" target="_blank">
 				<i class="fa fa-twitter-square" aria-hidden="true"></i>
 			</a>
-			<a href="http://www.instagram.com" target="_blank">
+			<a href="https://www.instagram.com/incomcomputacion/" target="_blank">
 				<i class="fa fa-instagram" aria-hidden="true"></i>
 			</a>
 		</div>
