--- a/services/web-creation.html
+++ b/services/web-creation.html
@@ -12,10 +12,10 @@
 	<title>INCOM Computación</title>
 </head>
 <body>
-	
+
 	<header>
 		<div class="main-header-container align">
-			
+
 			<a href="../index.html" class="logo">
 				<img src="../assets/media/logo.png" class="main-header-logo">
 			</a>
@@ -70,7 +70,7 @@
 			<button type="button" class="modal-contact-element button-element" id="closeModalButton" onClick="hideMenu()">Cerrar</button>
 	</section>
 
-		
+
 
 	<!--  Hide Modal Section  -->
 
@@ -82,13 +82,13 @@
 					<h2>Contacto</h2>
 				</div>
 				<div class="modal-contact-form">
-					<form action="#" method="POST">
-						<input type="text" name="uname" placeholder="Nombre" required="true" class="modal-contact-element">
+					<form action="../datos.php" method="POST">
+						<input type="text" name="name" placeholder="Nombre" required="true" class="modal-contact-element">
 						<input type="text" name="mobile" placeholder="Celular" required="true" class="modal-contact-element">
 						<input type="text" name="phone" placeholder="Telefono fijo" required="true" class="modal-contact-element">
 						<input type="email" name="email" placeholder="e-mail" required="true" class="modal-contact-element">
 
-						<textarea placeholder="Mensaje:" class="modal-contact-element textarea-element"></textarea>
+						<textarea placeholder="Mensaje:" name="mensaje" required="true" class="modal-contact-element textarea-element"></textarea>
 
 						<button type="submit" class="modal-contact-element button-element">Enviar</button>
 						<button type="button" class="modal-contact-element button-element" id="closeModalButton" onClick="hideModal()">Cerrar</button>
@@ -122,7 +122,7 @@
 					</div>
 				</div>
 			</div>
-		</div>	
+		</div>
 	</section>
 
 	<section class="fullscrn dark" id="pre_services">
